<resources>
    <string name="app_name">Makeshift Paint</string>
    <string name="largeur_trait">Largeur du trait :</string>
    <string name="annuler">Annuler</string>
    <string name="ok">OK</string>
    <string name="crayon">Crayon</string>
    <string name="efface">Efface</string>
    <string name="trait">Trait</string>
    <string name="cercle">Cercle</string>
    <string name="triangle">Triangle</string>
    <string name="rectangle">Rectangle</string>
    <string name="remplir">Remplir</string>
    <string name="pipette">Pipette</string>
    <string name="retour">Retour</string>
    <string name="refaire">Refaire</string>
    <string name="sauvegarder">Sauvegarder</string>
    <string name="x">X</string>
</resources>