<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ColorLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#673AB7"
        android:gravity="center">

        <Button
            android:id="@+id/ButtonColor1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#FF9800"
            android:textColor="#676767"
            android:textSize="30sp" />

        <Button
            android:id="@+id/ButtonColor2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#FFEB3B"
            android:backgroundTint="#FFEB3B"
            android:textColor="#676767"
            android:textSize="30sp" />

        <Button
            android:id="@+id/ButtonColor3"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:textColor="#676767"
            android:textSize="30sp" />

        <Button
            android:id="@+id/ButtonColor4"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#000000"
            android:text="@string/x"
            android:textColor="#676767"
            android:textSize="30sp" />

        <Button
            android:id="@+id/ButtonColor5"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#E91E63"
            android:textColor="#676767"
            android:textSize="30sp" />

        <Button
            android:id="@+id/ButtonColor6"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#FF0000"
            android:textColor="#676767"
            android:textSize="30sp" />

        <Button
            android:id="@+id/ButtonColor7"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00BCD4"
            android:textColor="#676767"
            android:textSize="30sp" />

        <Button
            android:id="@+id/ButtonColor8"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#4CAF50"
            android:textColor="#676767"
            android:textSize="30sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/DrawingLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="#00BCD4"
        android:textAlignment="center" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/OptionLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:gravity="center">

            <ImageButton
                android:id="@+id/ButtonCrayon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:backgroundTint="#4CAF50"
                android:contentDescription="@string/crayon"
                android:cropToPadding="false"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/crayon" />

            <ImageButton
                android:id="@+id/ButtonEfface"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/efface"
                android:cropToPadding="false"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/efface" />

            <ImageButton
                android:id="@+id/ButtonTrait"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/trait"
                android:cropToPadding="false"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/largeur_trait" />

            <ImageButton
                android:id="@+id/ButtonCercle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/cercle"
                android:cropToPadding="false"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/cercle" />

            <ImageButton
                android:id="@+id/ButtonTriangle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/triangle"
                android:cropToPadding="false"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/triangle" />

            <ImageButton
                android:id="@+id/ButtonRectangle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/rectangle"
                android:cropToPadding="false"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/rectangle" />

            <ImageButton
                android:id="@+id/ButtonRemplir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/remplir"
                android:cropToPadding="false"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/remplir" />

            <ImageButton
                android:id="@+id/ButtonPipette"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/pipette"
                android:cropToPadding="false"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/pipette" />

            <ImageButton
                android:id="@+id/ButtonUndo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/retour"
                android:cropToPadding="false"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/undo" />

            <ImageButton
                android:id="@+id/ButtonRedo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/refaire"
                android:cropToPadding="false"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/redo" />

            <ImageButton
                android:id="@+id/ButtonEnregistrer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/sauvegarder"
                android:cropToPadding="false"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/enregistrer" />

        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>